# graphics_learning

./: .CMakeLists.txt.swp  .gitignore  .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main  main.cpp
.cache/clangd/index/: _fixes.hpp.3D65A2792DA509D7.idx  _vectorize.hpp.93F4BF00F8D744A7.idx  boing.c.6B5F12B16529F064.idx  camera.cpp.BAC8B39920AE0F22.idx  camera.h.E8F42D60A2906B19.idx  clipboard.c.A023108A720756B2.idx  common.hpp.FD330637FF8BD50C.idx  constants.hpp.EF2739C3CD95291C.idx  constants.inl.C10E0E126D49A200.idx  context.c.2B87FB8E0EFF200E.idx  cursor.c.AC45A32B03987C53.idx  empty.c.2651D538BC511A08.idx  events.c.E91E7A417D6B09E8.idx  exponential.hpp.4720572C85C20361.idx  func_common.hpp.0A77B6C7D1CF1C97.idx  func_common.inl.E667565B05A13B48.idx  func_exponential.hpp.16DA511DF28DC11E.idx  func_exponential.inl.BC8D212FF312D905.idx  func_geometric.hpp.B5E17F8C02D9206C.idx  func_geometric.inl.CFF121220685D209.idx  func_integer.hpp.0A0FD524E0C3E5F7.idx  func_integer.inl.8AE89250CE57EC2C.idx  func_matrix.hpp.CB25BD7A75E46B81.idx  func_matrix.inl.DCBF87FFB60417B9.idx  func_packing.hpp.570263EE587ABB84.idx  func_packing.inl.7D88A8952C722F68.idx  func_trigonometric.hpp.B781B68812DAE689.idx  func_trigonometric.inl.A914F56933E251FD.idx  func_vector_relational.hpp.165E2505553AAE7F.idx  (+120 more)
basics/: basic  basics  main.cpp
includes/: camera.h  shader.h
lighting/: lighting  lighting.cpp
lighting/shaders/: colors.fs  colors.vs  lightCubeShader.vs
src/: camera.cpp  shader.cpp  shader.h
src/shaders/: shader.fs  shader.vs
